build: Remove unneeded JPMS options
Signed-off-by: BJ Hargrave <bj@hargrave.dev>